# comes-path

./: LICENSE  README.md  bench_test.py  pyproject.toml  requirements.txt  technical_test.py
.github/workflows/: workflow.yml
comes_path/core/: baselines.py  partitioning.py  relaxation.py  solver.py  structures.py
comes_path/core/__pycache__/: baselines.heappop-32.py313.1.nbc  baselines.heappop-32.py313.nbi  baselines.heappop-34.py313.1.nbc  baselines.heappop-34.py313.nbi  baselines.heappush-11.py313.1.nbc  baselines.heappush-11.py313.nbi  baselines.numba_dijkstra-69.py313.1.nbc  baselines.numba_dijkstra-69.py313.nbi  baselines.numba_dijkstra-72.py313.1.nbc  baselines.numba_dijkstra-72.py313.2.nbc  baselines.numba_dijkstra-72.py313.nbi  relaxation.identify_pivots-35.py313.1.nbc  relaxation.identify_pivots-35.py313.nbi  relaxation.identify_pivots-45.py313.1.nbc  relaxation.identify_pivots-45.py313.2.nbc  relaxation.identify_pivots-45.py313.nbi  relaxation.identify_pivots-46.py313.1.nbc  relaxation.identify_pivots-46.py313.nbi  relaxation.identify_pivots-71.py313.1.nbc  relaxation.identify_pivots-71.py313.nbi  relaxation.relax_pivots-11.py313.1.nbc  relaxation.relax_pivots-11.py313.2.nbc  relaxation.relax_pivots-11.py313.3.nbc  relaxation.relax_pivots-11.py313.4.nbc  relaxation.relax_pivots-11.py313.5.nbc  relaxation.relax_pivots-11.py313.6.nbc  relaxation.relax_pivots-11.py313.nbi  relaxation.relax_pivots-34.py313.1.nbc  relaxation.relax_pivots-34.py313.nbi  relaxation.relax_pivots-4.py313.1.nbc  (+7 more)
comes_path/utils/: loaders.py
tests/: test_core.py
